Version 1.2 -
    Features
        * Game archive, search
        * View-only mode
        * Spanish, Portuguese translations
        * Refactored internal game tree structures to support future features
          like collaborative editing
    Bugs
        * Broken KGS comments after saving to server

Version 1.1 - Jan 21 2008
    Features
        * Problem mode, crop/shrink-to-fit option
        * Score estimate (server-side)
        * Decoupled Player from BoardRenderer, which opens the door for
          alternative kinds of board renderers, like Flash
        * Proof-of-concept Flash board renderer
    Bug fixes
        * Messed up or missing coordinates display
        * Pass causing errant stone to be placed on board when skipping ahead
        * Error for multiple game info properties within same node