@@ -10,6 +10,7 @@ RewriteRule ^source$ /source.phtml [L,NE]
 RewriteRule ^upload$ /upload.phtml [L,NE]
 RewriteRule ^games$ /games.phtml [L,NE]
 RewriteRule ^tourney$ /tourney.phtml [L,NE]
+RewriteRule ^ff-extension$ /ff_extension.phtml [L,NE]
 RewriteRule ^(kjd)$ /#$1 [R,L,NE]
 RewriteRule ^(search)$ /#$1 [R,L,NE]
 RewriteRule ^(gnugo.*)$ /#$1 [R,L,NE]
