@@ -1,28 +1,22 @@
 planned
-- refactor GameNode/GameTree
-- remove marker tool
-- custom label
+- edit game info
+- multiple games per sgf
 - link directly to a node within a progressive-loading tree (use MPTT?)
 - wiki-like SGF editing
 - link each kogo's position with pro game search
-- delete orphan branches when moves are removed from the board
-- accurate nav slider after new moves played (base on nextSibling)
-- copy/paste ascii diagrams (http://www.dse.nl/~toni/go/ascii2sgf/index_uk.htm)
-- edit game info
-- sibling style navigation
 - show more search results
-- sibling-style variations
-- tree navigation
-- multiple games per sgf
+- tree navigation for IE
 - make failed game load non-fatal
 - show continuations for pattern search
+- accurate nav slider after new moves played (base on nextSibling)
+- custom label
 - brief help text (keyboard shortcuts, etc)?
-- make tools selection prettier
-- yield during load for more responsive ui
-- KJD permalinks that only require one JSON request
-- exhaustive FF[4] SGF support
+- sibling-style variations
 
 maybe
+- make tools selection prettier
+- exhaustive FF[4] SGF support
+- copy/paste ascii diagrams (http://www.dse.nl/~toni/go/ascii2sgf/index_uk.htm)
 - improve overall speed (rendering, capturing, history, etc)
 - full-featured flash renderer
 - subclass Array and leave no trace (each player has own iframe?)
@@ -31,3 +25,4 @@ maybe
 - native iPhone app
 - IGS client
 - more robust SGF parser
+- yield during load for more responsive ui
