@@ -1,0 +1,20 @@
+<?php $title = "Firefox Extension"; include("header.phtml"); ?>
+
+<div id="text-content">
+
+<h2>Firefox Extension</h2>
+
+<p><a href="http://www.blog.komrades.org/?p=45">Adrian Petrescu</a> has written
+    an excellent Firefox extension that allows you to open SGF files from other websites
+    in EidoGo.</p>
+    
+<p><a href="http://www.blog.komrades.org/?p=45">Here's more info.</a> Bug reports and feedback related to
+    extension can be sent directly to <a href="mailto:apetresc@gmail.com">Adrian</a>.</p>
+
+<div style='margin: 10px; padding: 10px; background: #ddd'>
+    <p>&raquo; <a href="http://komrades.org/eidogoext.xpi"><b>Install Extension</b></a> (You may need to tell Firefox to allow it.)</p>
+</div>
+
+</div>
+
+<?php include("footer.phtml"); ?>
