@@ -48,13 +48,10 @@ eidogoConfig = {skipCss: true};
             <li><a href="/#search">Pattern Search</a></li>
             <li><a href="tourney">Games</a></li>
             <li><a href="upload">Upload</a></li>
-            <li><a href="/#gnugo" style='padding-right: 4px'>GNU Go</a></li>
-            <li><a href="/#gnugo-9" style='padding-left: 4px; padding-right: 4px'>9x9</a></li>
-            <li><a href="/#gnugo-13" style='padding-left: 4px'>13x13</a></li>
-            <li><a href="/#blank" style='padding-right: 4px'>Blank Board</a></li>
-            <li><a href="/#blank-9" style='padding-left: 4px; padding-right: 4px'>9x9</a></li>
-            <li><a href="/#blank-13" style='padding-left: 4px'>13x13</a></li>
-            <li><a href="http://senseis.xmp.net/?EidoGo">About</a></li>
+            <li><a href="/#gnugo">GNU Go</a></li>
+            <li><a href="/#blank">Blank Board</a></li>
+            <li><a href="http://senseis.xmp.net/?EidoGo">Latest Updates</a></li>
+            <li><a href="/ff-extension">Firefox Extension</a></li>
         </ul>
 
     </div>
